# SecureDialogues

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  cryptopp.sh  secrets.txt
curl-wrapper/src/: CMakeLists.txt  curlexceptions.h  httpcode.h  httprequest.cpp  httprequest.h  uribuilder.cpp  uribuilder.h
doc/: CMakeLists.txt
doc/architecture/: CMakeLists.txt  architecture.adoc
doc/architecture/umls/: dialog-cancel.plantuml  dialog-composition.plantuml  dialog-contact-selected.plantuml  dialog-key-not-valid.plantuml  dialog-messages.planuml  general-presentation.plantuml  message-handling.plantuml  messages-module-presentation.plantuml
doc/user-guide/: CMakeLists.txt  user-guid.adoc
email-agent/src/: CMakeLists.txt
email-agent/src/email-agent/: imapreciever.cpp  imapreciever.h  skipcertverifier.cpp  skipcertverifier.h  smtpsender.cpp  smtpsender.h
encryption/src/: CMakeLists.txt
encryption/src/asymetrical/: asymetricalkeygenerator.cpp  asymetricalkeygenerator.h  asymetricalkeystore.cpp  localpeeroperations.cpp  localpeeroperations.h  remotepeeroperations.cpp  remotepeeroperations.h
encryption/src/interfaces/: asymetricalkeyserializer.h  decryptor.h  encryptor.h  generator.h  signaturechecker.h  signer.h  symetricalcipher.h
encryption/src/primitivies/: asymetricalkeystore.cpp  asymetricalkeystore.h
encryption/src/serialization/: aeskeydeserializator.cpp  aeskeydeserializator.h  aeskeyserializator.cpp  aeskeyserializator.h  fileasynckeyserializer.cpp  fileasynckeyserializer.h  publickeydeserializer.cpp  publickeydeserializer.h  publickeyserializator.cpp  publickeyserializator.h  serializations.cpp  serializations.h
encryption/src/symetrical/: aescipher.cpp  aescipher.h  aeskeygenerator.cpp  aeskeygenerator.h  aeskeystruct.h  symetricalsystemfactories.cpp  symetricalsystemfactories.h
encryption/test/: CMakeLists.txt
gui/src/: CMakeLists.txt  Gui_ru_RU.ts  applicationsettings.cpp  applicationsettings.h  basesettingsdialog.cpp  basesettingsdialog.h  basesettingsdialog.ui  dialogwidgetgasket.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
gui/src/dialogs/: appsettingsdialog.cpp  appsettingsdialog.h  appsettingsdialog.ui  builders.cpp  builders.h  connectioninfogasket.cpp  connectioninfogasket.h  contactdiscoverdialog.cpp  contactdiscoverdialog.h  contactdiscoverdialog.ui  contactgasket.cpp  contactgasket.h  dialogcreation.cpp  dialogcreation.h  dialogcreation.ui  importdiscoveredcontactdialog.cpp  importdiscoveredcontactdialog.h  importdiscoveredcontactdialog.ui  publickeydialog.cpp  publickeydialog.h  publickeydialog.ui  recieveddiscoveredcontactsdialog.cpp  recieveddiscoveredcontactsdialog.h  recieveddiscoveredcontactsdialog.ui  userinformator.cpp  userinformator.h
gui/src/gui-initializer/: eventqueueholder.cpp  eventqueueholder.h  (+2 more)
gui/test/: CMakeLists.txt  testchannellistmodel.cpp  testconnectionwidget.cpp  testcontactwidget.cpp
main/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  passask.cpp  passask.h  project_icons.qrc  secure-dialogues.rc
main/initializer/: chaneladapterfactory.cpp  chaneladapterfactory.h  coreinitializer.cpp  coreinitializer.h  guiinitializer.cpp  guiinitializer.h
messages/src/: CMakeLists.txt  constants.h  utils.cpp  utils.h
messages/test/: CMakeLists.txt
oauth-agents/src/: CMakeLists.txt
plugin-api/: CMakeLists.txt  api-version.h.in  plugin.schema.json  version-defs.cmake
plugin-api/export/: export-definition.h  languages.h  plaginfacade.h  pluginaddressvalidator.h  pluginapidefs.h  pluginapierrorcodes.h  pluginconnectioninfo.h  pluginconnectionserializer.h  pluginfacade.h  pluginmessagecommunicator.h  pluginwidget.h  recievedmessagesiterator.h
plugin-api/inner/: plugininnerdefs.h
plugins-support/: CMakeLists.txt  not_owned.h  owneddeletior.h  plugindiscovery.cpp  plugindiscovery.h  plugininterface.cpp  plugininterface.h  pluginmessagecommunicatorwrapper.cpp  pluginmessagecommunicatorwrapper.h  pluginscontainer.cpp  pluginscontainer.h  pluginwidgetwrapper.cpp  pluginwidgetwrapper.h  support-functions.h
plugins/gmail-plugin/: CMakeLists.txt  description.json.in  gmail_plugin_ru_RU.ts  gmailaddressvalidator.cpp  gmailaddressvalidator.h  gmailconnectioninfo.cpp  gmailconnectioninfo.h  gmailconnectionserializer.cpp  gmailconnectionserializer.h  gmailconnectionwidget.cpp  gmailconnectionwidget.h  gmailconnectionwidget.ui  gmailfacade.cpp  gmailfacade.h  gmailmessagecommunicator.cpp  gmailmessagecommunicator.h  gmailplugindefs.cpp  gmailplugindefs.h  gmailrecievedmessagesiterator.cpp  gmailrecievedmessagesiterator.h
plugins/smtp-plugin/: CMakeLists.txt  description.json.in  smtp_plugin_ru_RU.ts  smtpaddressvalidator.cpp  smtpaddressvalidator.h  smtpconnectioninfo.cpp  smtpconnectioninfo.h  smtpconnectionserializer.cpp  smtpconnectionserializer.h  smtpconnectionwidget.cpp  smtpconnectionwidget.h  smtpconnectionwidget.ui  smtpfacade.cpp  smtpfacade.h  smtpmessagecommunication.cpp  smtpmessagecommunication.h  smtpplugindefs.cpp  smtpplugindefs.h
plugins/vk-plugin/: CMakeLists.txt  description.json.in  vk_plugin_ru_RU.ts  vkaddressvalidator.cpp  vkaddressvalidator.h  vkconnectioninfo.cpp  vkconnectioninfo.h  vkconnectionserializer.cpp  vkconnectionserializer.h  vkconnectionwidget.cpp  vkconnectionwidget.h  vkconnectionwidget.ui  vkfacade.cpp  vkfacade.h  vkmessagecommunicator.cpp  vkmessagecommunicator.h  vkplugindefs.cpp  vkplugindefs.h
regression/apps/: CMakeLists.txt  regression_with_one_dialog.cpp
regression/dummy-plugin/: CMakeLists.txt  description.json.in  dummyaddressvalidator.cpp  dummyaddressvalidator.h  dummyconnectioninfo.cpp  dummyconnectioninfo.h  dummyconnectionserializer.cpp  dummyconnectionserializer.h  dummyconnectionwidget.cpp  dummyconnectionwidget.h  dummyfacade.cpp  dummyfacade.h  dummymessagecommunicator.cpp  dummymessagecommunicator.h  dummyplugindefs.cpp  dummyplugindefs.h
regression/src/: CMakeLists.txt
regression/test/: CMakeLists.txt  queuedactionschanneladaptertest.cpp  successdialogcreationtest.cpp
utils/src/: CMakeLists.txt
(+309 files in other folders)
